fix hamburger menu wrapping

--- a/style.css
+++ b/style.css
@@ -123,16 +123,6 @@ li {
     box-shadow: 0 -2px 5px -2px #888;
 }
 
-/* .projects {
-    background-color: #e2e8f0;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-}
-
- .card-icons img {
-    height: 1.5rem;
-} */
-
 .card-icons {
     float: right;
     height: 2rem;
@@ -176,6 +166,7 @@ li {
     color: #818181;
     display: block;
     font-size: 25px;
+    white-space: nowrap;
 }
 
 .overlay a:hover, .overlay a:focus {
